add load_securities endpoint for CVS parsed addition of securities and exchanges. eodhd data move sync-securities to sync-securities-from-av in preparation for deprecating add ticker to /portfolio/{id} listing to make for easier editing. accept portfolio type for updatePortfolio
